# Makefile -- Makefile for peripherals channels to host
#
# Copyright (C) 2002 Richard Prescott <rip@step.polymtl.ca>
# Copyright (C) 2008 Embecosm Limited
#
# Contributor Jeremy Bennett <jeremy.bennett@embecosm.com>
#
# This file is part of OpenRISC 1000 Architectural Simulator.
#
# This program is free software; you can redistribute it and/or modify it
# under the terms of the GNU General Public License as published by the Free
# Software Foundation; either version 3 of the License, or (at your option)
# any later version.
#
# This program is distributed in the hope that it will be useful, but WITHOUT
# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
# FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for
# more details.
#
# You should have received a copy of the GNU General Public License along
# with this program.  If not, see <http://www.gnu.org/licenses/>.


noinst_LTLIBRARIES     = libchannels.la
libchannels_la_SOURCES = channel.c \
                         fd.c      \
                         file.c    \
                         generic.c \
                         tcp.c     \
                         tty.c     \
                         xterm.c   \
                         channel.h \
                         fd.h      \
                         file.h    \
                         generic.h \
			 tcp.h     \
			 tty.h     \
			 xterm.h
