# Makefile.am for libor1ksim DejaGNU tests

# Copyright (C) Marko Mlinar, 2001
# Copyright (C) Embecosm Limited, 2010

# Contributor Jeremy Bennett <jeremy.bennett@embecosm.com>

# To add new test, edit between marked areas only

# This file is part of OpenRISC 1000 Architectural Simulator.

# This program is free software; you can redistribute it and/or modify it
# under the terms of the GNU General Public License as published by the Free
# Software Foundation; either version 3 of the License, or (at your option)
# any later version.

# This program is distributed in the hope that it will be useful, but WITHOUT
# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
# FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for
# more details.

# You should have received a copy of the GNU General Public License along
# with this program.  If not, see <http:#www.gnu.org/licenses/>.  */

# -----------------------------------------------------------------------------
# This code is commented throughout for use with Doxygen.
# -----------------------------------------------------------------------------


# Just distribute this stuff
EXTRA_DIST = default.cfg               \
	     int-edge.cfg              \
	     int-edge.exp              \
	     int-level.cfg             \
	     int-level.exp             \
	     jtag-basic.exp            \
	     jtag-go-command-read.exp  \
	     jtag-go-command-write.exp \
	     jtag-read-command.exp     \
	     jtag-read-control.exp     \
	     jtag-select-module.exp    \
	     jtag-write-control.exp    \
	     jtag-write-command.exp    \
	     lib-iftest.exp            \
	     upcalls.exp               \
	     upcalls.cfg
