# Makefile.am for or1ksim testsuite DejaGNU tests

# Copyright (C) Marko Mlinar, 2001
# Copyright (C) Embecosm Limited, 2010

# Contributor Jeremy Bennett <jeremy.bennett@embecosm.com>

# To add new test, edit between marked areas only

# This file is part of OpenRISC 1000 Architectural Simulator.

# This program is free software; you can redistribute it and/or modify it
# under the terms of the GNU General Public License as published by the Free
# Software Foundation; either version 3 of the License, or (at your option)
# any later version.

# This program is distributed in the hope that it will be useful, but WITHOUT
# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
# FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for
# more details.

# You should have received a copy of the GNU General Public License along
# with this program.  If not, see <http:#www.gnu.org/licenses/>.  */

# -----------------------------------------------------------------------------
# This code is commented throughout for use with Doxygen.
# -----------------------------------------------------------------------------


# Just distribute this stuff
EXTRA_DIST = acv-gpio.cfg      \
             acv-uart.cfg      \
             basic.exp         \
             cache.exp         \
             cbasic.exp        \
             cfg.exp           \
             default.cfg       \
             dhry.exp          \
             dmatest.exp       \
             eth0.rx           \
             eth.cfg           \
             eth.exp           \
             except-test.exp   \
             exit.exp          \
             ext.exp           \
             fbtest.exp        \
             flag.exp          \
	     fp.cfg            \
	     fp.exp            \
             functest.exp      \
             int-test.exp      \
	     inst-set-test.cfg \
	     inst-set-test.exp \
             kbdtest.cfg       \
             kbdtest.exp       \
             kbdtest.rx        \
             local-global.exp  \
             mem-test.exp      \
             mmu.cfg           \
             mmu.exp           \
             mul.exp           \
             mycompress.exp    \
	     testfloat.exp     \
             tick.exp	       \
	     pcu.cfg           \
	     pcu.exp
